examples/bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/unexpected_unit.st
language core;
extend with #unit-type;

fn main(_ : Nat) -> Nat {
    return unit
}//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
\n\n//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
/n/n//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
